infrastructure/manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: businesspartners 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: businesspartners
  template:
    metadata:
      labels:
        app: businesspartners 
    spec:
      containers:
        - name: businesspartners 
          image: $CONTAINER_REGISTRY/businesspartners:$VERSION
          imagePullPolicy: $IMAGE_PULL_POLICY
          ports:
          - containerPort: 80
