infrastructure/manifests/cdns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdns
  namespace: cdns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdns
  template:
    metadata:
      labels:
        app: cdns
    spec:
      containers:
      - name: cdns
        image: tsicatenaxdevacr.azurecr.io/cdns:0.1
        ports:
---
apiVersion: v1
kind: Service
metadata:
  name: cdns
  namespace: cdns
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: cdns
