infrastructure/manifests/portal-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    service.beta.kubernetes.io/azure-load-balancer-resource-group: tsicatenax-dev-node-rg
  name: portal-load-balancer
  namespace: portal
spec:
  loadBalancerIP: 20.79.116.193
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 80
  selector:
    app: portal
