infrastructure/manifests/portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
      - name: portal
<<<<<<< HEAD
        image: tsicatenaxdevacr.azurecr.io/portal:0.7
=======
        image: tsicatenaxdevacr.azurecr.io/portal:0.6
>>>>>>> feature/semantic-hub-mock
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: portal
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: portal
