infrastructure/manifests/semantics.yaml
#
# Copyright (c) 2021 T-Systems International GmbH (Catena-X Consortium)
#
# See the AUTHORS file(s) distributed with this work for additional
# information regarding authorship.
#
# See the LICENSE file(s) distributed with this work for
# additional information regarding license terms.
#

# K8 server deployment, service and ingress 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semantic-hub
  namespace: semantics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semantic-hub
  template:
    metadata:
      labels:
        app: semantic-hub
    spec:
      containers:
      - name: semantic-hub
        image: $CONTAINER_REGISTRY/semantics/hub${WORKSPACE}:$VERSION
        imagePullPolicy: $IMAGE_PULL_POLICY
        ports:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: semantics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: $CONTAINER_REGISTRY/semantics/registry${WORKSPACE}:$VERSION
        imagePullPolicy: $IMAGE_PULL_POLICY
        ports:
---
apiVersion: v1
kind: Service
metadata:
  name: semantic-hub
  namespace: semantics
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 4242
  selector:
    app: semantic-hub
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: semantics
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 4243
  selector:
    app: registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-ingress
  namespace: semantics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-service
    acme.cert-manager.io/http01-ingress-class: service
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/semantics/hub"
spec:
  ingressClassName: service
  tls:
  - hosts:
    - ${CATENA_SERVICE_URL}
    secretName: services-certificate-secret
  rules:
  - host: ${CATENA_SERVICE_URL}
    http:
      paths:
      - path: /semantics/hub(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: semantic-hub
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: semantics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-service
    acme.cert-manager.io/http01-ingress-class: service
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/semantics/twin-registry"
spec:
  ingressClassName: service
  tls:
  - hosts:
    - ${CATENA_SERVICE_URL}
    secretName: services-certificate-secret
  rules:
  - host: ${CATENA_SERVICE_URL}
    http:
      paths:
      - path: /semantics/twin-registry(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: registry
            port:
              number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adapter
  namespace: semantics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adapter
  template:
    metadata:
      labels:
        app: adapter
    spec:
      containers:
      - name: adapter
        image: $CONTAINER_REGISTRY/semantics/adapter${WORKSPACE}:$VERSION
        imagePullPolicy: $IMAGE_PULL_POLICY
        ports:
---
apiVersion: v1
kind: Service
metadata:
  name: adapter
  namespace: semantics
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 4244
  selector:
    app: adapter
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adapter-ingress
  namespace: semantics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-service
    acme.cert-manager.io/http01-ingress-class: service
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: service
  tls:
  - hosts:
    - ${CATENA_SERVICE_URL}
    secretName: adapter-certificate-secret
  rules:
  - host: ${CATENA_SERVICE_URL}
    http:
      paths:
      - path: /adapter(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: adapter
            port:
              number: 8080
# GRAPHDB
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphdb
  namespace: semantics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphdb
  template:
    metadata:
      labels:
        app: graphdb
    spec:
      containers:
      - name: graphdb
        image: $CONTAINER_REGISTRY/semantics/jena-fuseki:4.1.0
        imagePullPolicy: $IMAGE_PULL_POLICY
        args: ["--tdb2", "--update", "--loc", "databases/", "/ds"]
        resources:
          limits:
            memory: "1024Gi"
          requests:
            memory: "512Mi"
        volumeMounts:
        - name: graphdbdata
          mountPath: /fuseki/databases
        - name: graphdblog
          mountPath: /fuseki/logs
      volumes:
      - name: graphdbdata
        azureFile:
           secretName: graphdb-share-secret
           shareName: ${GRAPHDB_SHARE_NAME}/data
           readOnly: false
      - name: graphdblog
        azureFile:
           secretName: graphdb-share-secret
           shareName: ${GRAPHDB_SHARE_NAME}/log
           readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: graphdb
  namespace: semantics
spec:
  type: ClusterIP
  ports:
  - port: 3030
    targetPort: 3030
  selector:
    app: graphdb
